Pochti uze boze moj

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="css/slick.css"/>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -61,248 +61,225 @@
     <section class="gallery">
         <div class="gallery__corusel">
             <div>
-                <div class="gallery__slide-1">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Рецепция</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>1700 кв. м. совремнного финтнес пространства</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_1.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-2">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Рецепция</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Продуманные планировочные решения</li>
-                                    <li>Обновленный дизайн</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr"> Продуманные планировочные решения<br>Обновленный дизайн</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_2.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-3">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Тренажерный зал</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Увеличенный в два раза</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Тренажерный зал</div>
+                            <div class="gallery__descr">Увеличенный в два раза</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_3.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-4">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Тренажерный зал</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Разделенный на несколько зон: кардио-зона, зона свободных весов, зона блочных<br>
-                                        и нагружаемых дисками тренажеров, зона функционального тренинга,<br>
-                                        зона единоборств и зона растяжки</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Тренажерный зал</div>
+                            <div class="gallery__descr">Разделенный на несколько зон: кардио-зона, зона свободных весов, зона блочных и нагружаемых дисками тренажеров, зона функционального тренинга, зона единоборств и зона растяжки</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_4.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-5">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Тренажерный зал</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Новая премиум кардио-линейка тренажеров TechnoGym</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_5.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-6">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Большой зал групповых программ</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Более 25 групповых направлений: сила, функционал, танцы,<br>
-                                        единоборства, body&mind, йога, TRX, антигравити</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_6.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-7">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Малый зал групповых программ</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Новое оборудование для групповых тренировок</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_7.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-8">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Студия RealRyder</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Интерактивная сайкл-студия с датчиками пульса Polar</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_8.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-9">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Студия Pilates</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Единственный фитнес-клуб в Перми с собственным оборудованием<br>
-                                        для пилатеса - реформером Balanced Body Allegro</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_9.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-10">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Женская раздевалка</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Просторные раздевалки и вместительные шкафчики</li>
-                                    <li>Выбор любого понравившегося шкафчика</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_10.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-11">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Женская раздевалка</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Английские профессиональные фены премиум бренда Dyson имеют мощный двигатель и постоянную температуру,<br>
-                                        обеспечивающую быструю и бережную сушку волос</li>
-                                    <li>Удобные пуфики для make up’а</li>
-                                    <li>Салфетки, ватные диски и палочки</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_11.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-12">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Хаммам</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Турецкий хаммам с лучшими немецкими фильтрами</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_12.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-13">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Мужская раздевалка</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Просторные раздевалки и вместительные шкафчики</li>
-                                    <li>Выбор любого понравившегося шкафчика</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_13.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-14">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Мужская раздевалка</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Тропический душ и массажный эффект дает расслабление, бодрит и повышает тонус</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_14.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-15">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Финская сауна</div>
-                            <div class="gallery__descr">
-                                <ul>
-                                    <li>Снабжает организм важными микроэлементами</li>
-                                    <li>Приводит в тонус все мышцы тела</li>
-                                    <li>Успокаивает нервы</li>
-                                </ul>
-                            </div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_15.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <div class="gallery__slide-16">
-                    <div class="container">
+                <div class="container">
+                    <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__tittle">Входная зона</div>
+                            <div class="gallery__title">Рецепция</div>
+                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/gallery/img_16.jpg" alt="">
                         </div>
                     </div>
                 </div>
