--- a/src/index.html
+++ b/src/index.html
@@ -120,8 +120,8 @@
                 <div class="container">
                     <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__title">Рецепция</div>
-                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
+                            <div class="gallery__title">Тренажерный зал</div>
+                            <div class="gallery__descr">Новая премиум кардио-линейка тренажеров TechnoGym</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
                         </div>
                         <div class="gallery__img">
@@ -134,8 +134,8 @@
                 <div class="container">
                     <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__title">Рецепция</div>
-                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
+                            <div class="gallery__title">Большой зал групповых программ</div>
+                            <div class="gallery__descr">Более 25 групповых направлений: сила, функционал, танцы, единоборства, body&mind, йога, TRX, антигравити</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
                         </div>
                         <div class="gallery__img">
@@ -148,8 +148,8 @@
                 <div class="container">
                     <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__title">Рецепция</div>
-                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
+                            <div class="gallery__title">Малый зал групповых программ</div>
+                            <div class="gallery__descr">Новое оборудование для групповых тренировок</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
                         </div>
                         <div class="gallery__img">
@@ -162,8 +162,8 @@
                 <div class="container">
                     <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__title">Рецепция</div>
-                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
+                            <div class="gallery__title">Студия RealRyder</div>
+                            <div class="gallery__descr">Интерактивная сайкл-студия с датчиками пульса Polar</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
                         </div>
                         <div class="gallery__img">
@@ -176,8 +176,8 @@
                 <div class="container">
                     <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__title">Рецепция</div>
-                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
+                            <div class="gallery__title">Студия Pilates</div>
+                            <div class="gallery__descr">Единственный фитнес-клуб в Перми с собственным оборудованием для пилатеса - реформером Balanced Body Allegro</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
                         </div>
                         <div class="gallery__img">
@@ -190,8 +190,8 @@
                 <div class="container">
                     <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__title">Рецепция</div>
-                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
+                            <div class="gallery__title">Женская раздевалка</div>
+                            <div class="gallery__descr">Просторные раздевалки и вместительные шкафчики<br>Выбор любого понравившегося шкафчика</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
                         </div>
                         <div class="gallery__img">
@@ -204,8 +204,11 @@
                 <div class="container">
                     <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__title">Рецепция</div>
-                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
+                            <div class="gallery__title">Женская раздевалка</div>
+                            <div class="gallery__descr">
+                                Английские профессиональные фены премиум бренда Dyson имеют мощный двигатель и постоянную температуру, обеспечивающую быструю и бережную сушку волос
+                                <br>Удобные пуфики для make up’а
+                            </div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
                         </div>
                         <div class="gallery__img">
@@ -218,8 +221,8 @@
                 <div class="container">
                     <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__title">Рецепция</div>
-                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
+                            <div class="gallery__title">Хаммам</div>
+                            <div class="gallery__descr">Турецкий хаммам с лучшими немецкими фильтрами</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
                         </div>
                         <div class="gallery__img">
@@ -232,8 +235,11 @@
                 <div class="container">
                     <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__title">Рецепция</div>
-                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
+                            <div class="gallery__title">Мужская раздевалка</div>
+                            <div class="gallery__descr">
+                                Просторные раздевалки и вместительные шкафчики
+                                <br>Выбор любого понравившегося шкафчика
+                            </div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
                         </div>
                         <div class="gallery__img">
@@ -246,8 +252,8 @@
                 <div class="container">
                     <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__title">Рецепция</div>
-                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
+                            <div class="gallery__title">Мужская раздевалка</div>
+                            <div class="gallery__descr">Тропический душ и массажный эффект дает расслабление, бодрит и повышает тонус</div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
                         </div>
                         <div class="gallery__img">
@@ -260,8 +266,12 @@
                 <div class="container">
                     <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__title">Рецепция</div>
-                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
+                            <div class="gallery__title">Финская сауна</div>
+                            <div class="gallery__descr">
+                                Снабжает организм важными микроэлементами
+                                <br>Приводит в тонус все мышцы тела
+                                <br>Успокаивает нервы
+                            </div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
                         </div>
                         <div class="gallery__img">
@@ -274,8 +284,8 @@
                 <div class="container">
                     <div class="gallery__wraper">
                         <div class="gallery__info">
-                            <div class="gallery__title">Рецепция</div>
-                            <div class="gallery__descr">1700 кв. м. совремнного финтнес пространства</div>
+                            <div class="gallery__title">Входная зона</div>
+                            <div class="gallery__descr"></div>
                             <button class="button button_gallery">Записаться на первое занятие</button>
                         </div>
                         <div class="gallery__img">
@@ -284,23 +294,82 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
 
 
-    <!-- PRICELIST -->
+    <!-- SERVISES -->
 
-    <section class="pricelist">
-
+    <section class="services">
+        <div class="container">
+            <h2 class="services__title">Услуги клуба</h2>
+            <div class="services__content">
+                <div class="services__item">
+                    <div class="services__img">
+                        <img src="img/services/services_1.jpg" alt="">
+                    </div>
+                    <div class="services__subtitle">Персональный тренинг</div>
+                </div>
+                <div class="services__item services__item_purple">
+                    <div class="services__img">
+                        <img src="img/services/services_2.jpg" alt="">
+                    </div>
+                    <div class="services__subtitle">групповые тренировки</div>
+                </div>
+                <div class="services__item">
+                    <div class="services__img">
+                        <img src="img/services/services_3.jpg" alt="">
+                    </div>
+                    <div class="services__subtitle">сайкл-студия</div>
+                </div>
+                <div class="services__item services__item_yellow">
+                    <div class="services__img">
+                        <img src="img/services/services_4.jpg" alt="">
+                    </div>
+                    <div class="services__subtitle">студия пилетеса</div>
+                </div>
+                <div class="services__item">
+                    <div class="services__img">
+                        <img src="img/services/services_5.jpg" alt="">
+                    </div>
+                    <div class="services__subtitle">солярий</div>
+                </div>
+                <div class="services__item services__item_white">
+                    <div class="services__img">
+                        <img src="img/services/services_6.jpg" alt="">
+                    </div>
+                    <div class="services__subtitle">фитнес-бар</div>
+                </div>
+                <div class="services__item">
+                    <div class="services__img">
+                        <img src="img/services/services_7.jpg" alt="">
+                    </div>
+                    <div class="services__subtitle">фитнес-тестирование</div>
+                </div>
+                <div class="services__item services__item_purple">
+                    <div class="services__img">
+                        <img src="img/services/services_8.jpg" alt="">
+                    </div>
+                    <div class="services__subtitle">парковка</div>
+                </div>
+                <div class="services__item services__item_yellow">
+                    <div class="services__img">
+                        <img src="img/services/services_9.jpg" alt="">
+                    </div>
+                    <div class="services__subtitle">мини-группы</div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
 
-    <!-- STUDIO -->
+    <!-- PRICE -->
 
-    <section class="studio">
+    <section class="price">
         <div class="container">
-
+            
         </div>
     </section>
 
